--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -17,6 +17,7 @@
   line-height: normal;
 
   background-color: @osu-colour-b2;
+  cursor: pointer;
 
   .link-hover({
     color: white;
@@ -55,7 +56,7 @@
     margin: 10px auto 0;
   }
 
-  &[disabled], &.js-disabled {
+  &[data-disabled='1'], &.js-disabled {
     background-color: @osu-colour-b2;
   }
 
@@ -65,7 +66,7 @@
     position: absolute;
     display: none;
 
-    .@{_top}[disabled] &, .@{_top}.js-disabled & {
+    .@{_top}[data-disabled='1'] &, .@{_top}.js-disabled & {
       display: flex;
     }
   }
@@ -75,7 +76,7 @@
     margin: 0 -5px;
     display: flex;
 
-    .@{_top}[disabled] &, .@{_top}.js-disabled & {
+    .@{_top}[data-disabled='1'] &, .@{_top}.js-disabled & {
       opacity: 0;
     }
   }
@@ -90,6 +91,10 @@
 
     .@{_top}--notification-group & {
       color: #fff;
+    }
+
+    .@{_top}--no-icon & {
+      display: none;
     }
   }
 
