Show mapper badge

--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -151,6 +151,16 @@
     margin: 2px 0;
   }
 
+  &__owner-badge {
+    background-color: @osu-colour-l1;
+    color: @osu-colour-b6;
+    font-weight: bold;
+    font-size: @font-size--small;
+    bottom: 2px;
+    padding: $bottom 5px;
+    border-radius: 10000px;
+  }
+
   &__replies {
     margin-top: 10px;
 
