--- a/resources/assets/less/bem/form-select.less
+++ b/resources/assets/less/bem/form-select.less
@@ -34,6 +34,10 @@
     pointer-events: none;
   }
 
+  &--full {
+    flex: 1;
+  }
+
   &--simple-form {
     background-color: @osu-colour-b4;
     color: @osu-colour-c1;
