Show friend button on list

--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -25,4 +25,9 @@
     border-radius: 50%;
     padding: unset;
   }
+
+  &--user-list {
+    height: @user-list-icon-size;
+    font-size: ($height * 0.6);
+  }
 }
