Add user brick mode

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -354,6 +354,7 @@
 @import "bem/update-streams-v2";
 @import "bem/user-action-button";
 @import "bem/user-card";
+@import "bem/user-card-brick";
 @import "bem/user-cards";
 @import "bem/user-group-badge";
 @import "bem/user-home";
