--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -13,6 +13,11 @@
   padding: 0 10px;
   line-height: normal;
 
+  &--dynamic {
+    height: 1.67em;
+    font-size: 0.6em;
+  }
+
   &--quick-search {
     font-size: 8px; // icon size
     height: 100%;
