--- a/resources/assets/less/bem/user-action-button.less
+++ b/resources/assets/less/bem/user-action-button.less
@@ -41,6 +41,12 @@
     }
   }
 
+  &--dynamic {
+    height: 1.67em;
+    width: $height * 1.5;
+    font-size: 0.6em;
+  }
+
   &--profile-page {
     .default-text-shadow();
     min-width: 80px;
