--- a/resources/assets/less/bem/user-cards.less
+++ b/resources/assets/less/bem/user-cards.less
@@ -19,4 +19,13 @@
     grid-template-columns: 1fr;
     grid-gap: 2px;
   }
+
+  &--brick {
+    --item-margin: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: calc(var(--item-margin) * -1);
+    justify-content: flex-start;
+    grid-gap: 0; // firefox supports gap in flex but we're not using it
+  }
 }
