Add ability to load more chat messages

--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -32,6 +32,10 @@
     margin: 40px 0;
   }
 
+  &--chat-conversation-earlier-messages {
+    margin: 20px auto 0;
+  }
+
   &--comment-replies {
     text-align: left;
     padding-left: 10px;
