Use outline to show friend status

--- a/resources/assets/less/bem/user-card-brick.less
+++ b/resources/assets/less/bem/user-card-brick.less
@@ -23,6 +23,14 @@
 
   overflow: hidden;
 
+  &--friend {
+    border: 2px solid @osu-colour-green-2;
+  }
+
+  &--mutual {
+    border: 2px solid @osu-colour-pink-2;
+  }
+
   &__background {
     // to prevent annoying white-pixel artefacts appearing due to
     // browsers not handling 'overflow: hidden' properly
