Add title to multiplayer match page

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -242,6 +242,11 @@
     display: flex;
   }
 
+  &--mp-history {
+    .default();
+    .default-gutter-v2();
+  }
+
   &--notification-banners {
     @media @desktop {
       height: 0;
