--- a/resources/assets/less/bem/user-card-brick.less
+++ b/resources/assets/less/bem/user-card-brick.less
@@ -29,6 +29,7 @@
     content: '';
     box-shadow: inset 0 0 0 2px var(--border);
     border-radius: @_border-radius;
+    pointer-events: none;
   }
 
   &--friend {
