--- a/resources/assets/less/bem/beatmap-discussion-nomination.less
+++ b/resources/assets/less/bem/beatmap-discussion-nomination.less
@@ -2,7 +2,7 @@
 // See the LICENCE file in the repository root for full licence text.
 
 .beatmap-discussion-nomination {
-  @top: beatmap-discussion-nomination;
+  @_top: beatmap-discussion-nomination;
   background-color: @osu-colour-b4;
   color: #fff;
   padding: 10px;
@@ -11,101 +11,48 @@
   flex-direction: column;
   justify-content: space-between;
 
-  &__footer {
-    display: flex;
-    flex-direction: column;
-
-    &--extended {
-      flex: 1 0 auto;
-    }
-  }
-
   &__header {
     display: flex;
     justify-content: space-between;
     font-size: @font-size--small-2;
+  }
 
-    @media @mobile {
+  &__item {
+    margin: var(--item-margin);
+
+    &:empty {
+      display: none;
+    }
+
+    .@{_top}__items--buttons {
+      flex: none;
+    }
+
+    &--nominators {
+      text-align: right;
+    }
+  }
+
+  &__items {
+    --item-margin: 10px;
+    display: flex;
+    margin: calc(var(--item-margin) * -1);
+    font-size: @font-size--normal;
+
+    &--buttons {
+      --item-margin: 2px;
+      flex-wrap: wrap;
+      margin-top: 20px;
+    }
+
+    &--messages {
       flex-direction: column;
-      align-items: center;
-      margin-bottom: 10px;
     }
   }
 
   &__lights {
     display: flex;
     margin: 0 -2.5px;
-
-    @media @mobile {
-      margin: 10px;
-    }
-  }
-
-  &__note {
-    font-size: @font-size--normal;
-    color: #eee;
-    margin-right: 10px;
-    margin-top: 5px;
-    word-wrap: break-word;
-
-    .@{top}__footer--extended & {
-      padding-top: 5px;
-      height: 100%;
-    }
-
-    &--nominators {
-      align-self: flex-end;
-    }
-
-    a {
-      .link-default();
-    }
-  }
-
-  &__note-row {
-    & + & {
-      margin-top: 5px;
-    }
-  }
-
-  &__status-message {
-    font-size: 14px;
-    width: 100%;
-    text-align: center;
-
-    @media @desktop {
-      text-align: inherit;
-    }
-  }
-
-  &__row {
-    flex-direction: row;
-    display: flex;
-    margin-bottom: 10px;
-
-    &--status-message {
-      margin-bottom: 20px;
-    }
-
-    @media @mobile {
-      flex-direction: column;
-      margin-bottom: 0px;
-    }
-  }
-
-  &__row-left {
-    margin-right: 10px;
-    @media @desktop {
-      flex: 1;
-    }
-  }
-
-  &__row-right {
-    width: 150px;
-
-    @media @mobile {
-      align-self: center;
-    }
   }
 
   &__title {
