--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -15,6 +15,7 @@
 @import "bem/artist-album";
 @import "bem/artist-link-button";
 @import "bem/artist-sidebar-album";
+@import "bem/audio-player";
 @import "bem/avatar";
 @import "bem/avatar-ribbon";
 @import "bem/back-to-top";
