Extract formatting options to an on-select tooltip

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -25,6 +25,7 @@
 @import "bem/beatmap-basic-stats";
 @import "bem/beatmap-discussion";
 @import "bem/beatmap-discussion-editor";
+@import "bem/beatmap-discussion-editor-toolbar";
 @import "bem/beatmap-discussion-expand";
 @import "bem/beatmap-discussion-message-length-counter";
 @import "bem/beatmap-discussion-message-type";
