--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -283,6 +283,7 @@
 @import "bem/quick-search-items";
 @import "bem/quick-search-result";
 @import "bem/ranking-country-filter";
+@import "bem/ranking-filter";
 @import "bem/ranking-page";
 @import "bem/ranking-page-table";
 @import "bem/rankings-beatmapsets";
