--- a/resources/assets/less/bem/beatmapset-event.less
+++ b/resources/assets/less/bem/beatmapset-event.less
@@ -35,6 +35,7 @@
     .type(discussion-restore, @blue);
     .type(discussion-unlock, @green);
     .type(disqualify, @red);
+    .type(genre-edit, @blue);
     .type(issue-reopen, @yellow);
     .type(issue-resolve, @green);
     .type(kudosu-allow, @blue);
@@ -42,6 +43,7 @@
     .type(kudosu-gain, @blue);
     .type(kudosu-lost, @red);
     .type(kudosu-recalculate, #ccc);
+    .type(language-edit, @blue);
     .type(nominate, @blue);
     .type(nomination-reset, @red);
     .type(qualify, @blue);
