Fix positioning on forum

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -16,6 +16,7 @@
 @import "bem/artist-link-button";
 @import "bem/artist-sidebar-album";
 @import "bem/audio-player";
+@import "bem/audio-player-floating";
 @import "bem/avatar";
 @import "bem/avatar-ribbon";
 @import "bem/back-to-top";
