--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -95,8 +95,8 @@
 @z-index--simple-menu-hover-object: 102;
 @z-index--admin-menu: 499;
 @z-index--back-to-top: 500;
+@z-index--audio-player-floating: 501;
 @z-index--fixed-bar: 502;
-@z-index--audio-player: 503;
 @z-index--user-card-tooltip: 509;
 @z-index--blackout: 510;
 // FIXME: this should be lower than blackout and increased on mobile when the menu is active
